syntax = "proto3";

package mail;

service MailService {
  rpc SendResetPasswordLink (SendMailRequest) returns (SendMailResponse);
}

message SendMailRequest {
  string to = 1;
  string subject = 2;
  string text = 3;
}

message SendMailResponse {
  bool success = 1;
}